samples/_failures_safe/1761173035_93ef9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_951c5219.c: In function ‘main’:
./samples/SAFE/__tmp_951c5219.c:155:15: error: expected ‘;’ at end of input
  155 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_951c5219.c:155:9: error: expected declaration or statement at end of input
  155 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_951c5219.c:155:9: error: expected declaration or statement at end of input
